--- a/tests/user_neighborhood/Makefile
+++ b/tests/user_neighborhood/Makefile
@@ -1,5 +1,5 @@
-# use -fno-builtin-sprintf to avoid warning about gnu specific formatting in sprintf by boost lexical_cast
-FLAGS = -O3 -W -Wall -Wextra -pedantic -std=c++0x -fno-builtin-sprintf
+# boost causes too many warnings at least on gcc-4.8.2 without -Wno-...
+FLAGS = -O3 -W -Wall -Wextra -pedantic -std=c++0x -Wno-unused-local-typedefs
 INCLUDES = -I../.. -I../advection -I$$HOME/include -L$$HOME/lib -lboost_mpi -lboost_program_options -lboost_serialization -lzoltan
 CXX = mpic++ $(FLAGS)
 
