--- a/tests/poisson/Makefile
+++ b/tests/poisson/Makefile
@@ -1,7 +1,8 @@
 # use this many mpi processes in parallel tests
 PROCS := 6
 
-FLAGS = -O3 -W -Wall -Wextra -pedantic -std=c++0x
+# boost causes too many warnings at least on gcc-4.8.2 without -Wno-...
+FLAGS = -O3 -W -Wall -Wextra -pedantic -std=c++0x -Wno-unused-local-typedefs
 INCLUDES = -I../.. -I../advection -I$$HOME/include -L$$HOME/lib
 LIBS = -lboost_program_options -lzoltan
 BOOST_MPI_LIBS = -lboost_serialization -lboost_mpi
