--- a/tests/poisson/Makefile
+++ b/tests/poisson/Makefile
@@ -18,7 +18,8 @@ PROGRAMS = \
 	poisson1d_amr \
 	poisson1d_skip_cells \
 	poisson1d_stretched \
-	poisson2d
+	poisson2d \
+	poisson3d
 
 TEST_PROGRAMS = \
 	reference_poisson_test \
@@ -26,7 +27,8 @@ TEST_PROGRAMS = \
 	poisson1d_amr \
 	poisson1d_skip_cells \
 	poisson1d_stretched \
-	poisson2d
+	poisson2d \
+	poisson3d
 
 HEADERS = \
 	../../dccrg.hpp \
@@ -56,6 +58,9 @@ poisson1d: poisson1d.cpp $(HEADERS) Makefile
 poisson2d: poisson2d.cpp $(HEADERS) Makefile
 	@echo "MPICXX $@" && $(MPICXX) $(FLAGS) $(INCLUDES) $< $(LIBS) $(BOOST_MPI_LIBS) -o $@
 
+poisson3d: poisson3d.cpp $(HEADERS) Makefile
+	@echo "MPICXX $@" && $(MPICXX) $(FLAGS) $(INCLUDES) $< $(LIBS) $(BOOST_MPI_LIBS) -o $@
+
 reference_poisson_example: reference_poisson_example.cpp reference_poisson_solve.hpp Makefile
 	@echo "CXX $@" && $(CXX) $(FLAGS) $(INCLUDES) $< $(LIBS) -o $@
 
@@ -73,6 +78,7 @@ test: $(TEST_PROGRAMS)
 	@echo -n "Testing 1d poisson solver with skipped cells in serial... " && ./poisson1d_skip_cells
 	@echo -n "Testing 1d poisson solver on a stretched grid in serial... " && ./poisson1d_stretched
 	@echo -n "Testing 2d poisson solver in serial... " && ./poisson2d
+	@echo -n "Testing 3d poisson solver in serial... " && ./poisson3d
 
 pt: parallel-test
 parallel-test: $(TEST_PROGRAMS)
@@ -81,6 +87,7 @@ parallel-test: $(TEST_PROGRAMS)
 	@echo -n "Testing 1d poisson solver with skipped cells using $(PROCS) processes... " && $(MPIRUN) ./poisson1d_skip_cells
 	@echo -n "Testing 1d stretched poisson solver using $(PROCS) processes... " && $(MPIRUN) ./poisson1d_stretched
 	@echo -n "Testing 2d poisson solver using $(PROCS) processes... " && $(MPIRUN) ./poisson2d
+	@echo -n "Testing 3d poisson solver using $(PROCS) processes... " && $(MPIRUN) ./poisson3d
 
 d: data
 data:
