Use printf instead of echo in poisson tests' makefile.

--- a/tests/poisson/Makefile
+++ b/tests/poisson/Makefile
@@ -48,60 +48,60 @@ HEADERS = \
 all: $(PROGRAMS)
 
 poisson1d_amr: poisson1d_amr.cpp $(HEADERS) Makefile
-	@echo "MPICXX $@" && $(MPICXX) $(FLAGS) $(INCLUDES) $< $(LIBS) $(BOOST_MPI_LIBS) -o $@
+	@printf "MPICXX $@\n" && $(MPICXX) $(FLAGS) $(INCLUDES) $< $(LIBS) $(BOOST_MPI_LIBS) -o $@
 
 poisson1d_boundary: poisson1d_boundary.cpp $(HEADERS) Makefile
-	@echo "MPICXX $@" && $(MPICXX) $(FLAGS) $(INCLUDES) $< $(LIBS) $(BOOST_MPI_LIBS) -o $@
+	@printf "MPICXX $@\n" && $(MPICXX) $(FLAGS) $(INCLUDES) $< $(LIBS) $(BOOST_MPI_LIBS) -o $@
 
 poisson1d_skip_cells: poisson1d_skip_cells.cpp $(HEADERS) Makefile
-	@echo "MPICXX $@" && $(MPICXX) $(FLAGS) $(INCLUDES) $< $(LIBS) $(BOOST_MPI_LIBS) -o $@
+	@printf "MPICXX $@\n" && $(MPICXX) $(FLAGS) $(INCLUDES) $< $(LIBS) $(BOOST_MPI_LIBS) -o $@
 
 poisson1d_stretched: poisson1d_stretched.cpp $(HEADERS) Makefile
-	@echo "MPICXX $@" && $(MPICXX) $(FLAGS) $(INCLUDES) $< $(LIBS) $(BOOST_MPI_LIBS) -o $@
+	@printf "MPICXX $@\n" && $(MPICXX) $(FLAGS) $(INCLUDES) $< $(LIBS) $(BOOST_MPI_LIBS) -o $@
 
 poisson1d: poisson1d.cpp $(HEADERS) Makefile
-	@echo "MPICXX $@" && $(MPICXX) $(FLAGS) $(INCLUDES) $< $(LIBS) $(BOOST_MPI_LIBS) -o $@
+	@printf "MPICXX $@\n" && $(MPICXX) $(FLAGS) $(INCLUDES) $< $(LIBS) $(BOOST_MPI_LIBS) -o $@
 
 poisson2d: poisson2d.cpp $(HEADERS) Makefile
-	@echo "MPICXX $@" && $(MPICXX) $(FLAGS) $(INCLUDES) $< $(LIBS) $(BOOST_MPI_LIBS) -o $@
+	@printf "MPICXX $@\n" && $(MPICXX) $(FLAGS) $(INCLUDES) $< $(LIBS) $(BOOST_MPI_LIBS) -o $@
 
 poisson2d_boundary: poisson2d_boundary.cpp $(HEADERS) Makefile
-	@echo "MPICXX $@" && $(MPICXX) $(FLAGS) $(INCLUDES) $< $(LIBS) $(BOOST_MPI_LIBS) -o $@
+	@printf "MPICXX $@\n" && $(MPICXX) $(FLAGS) $(INCLUDES) $< $(LIBS) $(BOOST_MPI_LIBS) -o $@
 
 poisson3d: poisson3d.cpp $(HEADERS) Makefile
-	@echo "MPICXX $@" && $(MPICXX) $(FLAGS) $(INCLUDES) $< $(LIBS) $(BOOST_MPI_LIBS) -o $@
+	@printf "MPICXX $@\n" && $(MPICXX) $(FLAGS) $(INCLUDES) $< $(LIBS) $(BOOST_MPI_LIBS) -o $@
 
 reference_poisson_example: reference_poisson_example.cpp reference_poisson_solve.hpp Makefile
-	@echo "CXX $@" && $(CXX) $(FLAGS) $(INCLUDES) $< $(LIBS) -o $@
+	@printf "CXX $@\n" && $(CXX) $(FLAGS) $(INCLUDES) $< $(LIBS) -o $@
 
 reference_poisson_test: reference_poisson_test.cpp reference_poisson_solve.hpp Makefile
-	@echo "CXX $@" && $(CXX) $(FLAGS) $(INCLUDES) $< $(LIBS) -o $@
+	@printf "CXX $@\n" && $(CXX) $(FLAGS) $(INCLUDES) $< $(LIBS) -o $@
 
 plots:
 	@echo "Plotting 1d stretched poisson test results with gnuplot... " && for f in *.gnuplot; do gnuplot $$f; done
 
 t: test
 test: $(TEST_PROGRAMS)
-	@echo -n "Testing reference poisson solver... " && ./reference_poisson_test
-	@echo -n "Testing 1d poisson solver in serial... " && ./poisson1d
-	@echo -n "Testing 1d poisson solver on a refined grid in serial... " && ./poisson1d_amr
-	@echo -n "Testing 1d poisson solver with boundaries in serial... " && ./poisson1d_boundary
-	@echo -n "Testing 1d poisson solver with skipped cells in serial... " && ./poisson1d_skip_cells
-	@echo -n "Testing 1d poisson solver on a stretched grid in serial... " && ./poisson1d_stretched
-	@echo -n "Testing 2d poisson solver in serial... " && ./poisson2d
-	@echo -n "Testing 2d poisson solver with boundaries in serial... " && ./poisson2d_boundary
-	@echo -n "Testing 3d poisson solver in serial... " && ./poisson3d
+	@printf "Testing reference poisson solver... " && ./reference_poisson_test
+	@printf "Testing 1d poisson solver in serial... " && ./poisson1d
+	@printf "Testing 1d poisson solver on a refined grid in serial... " && ./poisson1d_amr
+	@printf "Testing 1d poisson solver with boundaries in serial... " && ./poisson1d_boundary
+	@printf "Testing 1d poisson solver with skipped cells in serial... " && ./poisson1d_skip_cells
+	@printf "Testing 1d poisson solver on a stretched grid in serial... " && ./poisson1d_stretched
+	@printf "Testing 2d poisson solver in serial... " && ./poisson2d
+	@printf "Testing 2d poisson solver with boundaries in serial... " && ./poisson2d_boundary
+	@printf "Testing 3d poisson solver in serial... " && ./poisson3d
 
 pt: parallel-test
 parallel-test: $(TEST_PROGRAMS)
-	@echo -n "Testing 1d poisson solver using $(PROCS) processes... " && $(MPIRUN) ./poisson1d
-	@echo -n "Testing 1d amr poisson solver using $(PROCS) processes... " && $(MPIRUN) ./poisson1d_amr
-	@echo -n "Testing 1d poisson solver with boundaries using $(PROCS) processes... " && $(MPIRUN) ./poisson1d_boundary
-	@echo -n "Testing 1d poisson solver with skipped cells using $(PROCS) processes... " && $(MPIRUN) ./poisson1d_skip_cells
-	@echo -n "Testing 1d stretched poisson solver using $(PROCS) processes... " && $(MPIRUN) ./poisson1d_stretched
-	@echo -n "Testing 2d poisson solver using $(PROCS) processes... " && $(MPIRUN) ./poisson2d
-	@echo -n "Testing 2d poisson solver with boundaries using $(PROCS) processes... " && $(MPIRUN) ./poisson2d
-	@echo -n "Testing 3d poisson solver using $(PROCS) processes... " && $(MPIRUN) ./poisson3d
+	@printf "Testing 1d poisson solver using $(PROCS) processes... " && $(MPIRUN) ./poisson1d
+	@printf "Testing 1d amr poisson solver using $(PROCS) processes... " && $(MPIRUN) ./poisson1d_amr
+	@printf "Testing 1d poisson solver with boundaries using $(PROCS) processes... " && $(MPIRUN) ./poisson1d_boundary
+	@printf "Testing 1d poisson solver with skipped cells using $(PROCS) processes... " && $(MPIRUN) ./poisson1d_skip_cells
+	@printf "Testing 1d stretched poisson solver using $(PROCS) processes... " && $(MPIRUN) ./poisson1d_stretched
+	@printf "Testing 2d poisson solver using $(PROCS) processes... " && $(MPIRUN) ./poisson2d
+	@printf "Testing 2d poisson solver with boundaries using $(PROCS) processes... " && $(MPIRUN) ./poisson2d
+	@printf "Testing 3d poisson solver using $(PROCS) processes... " && $(MPIRUN) ./poisson3d
 
 d: data
 data:
