--- a/tests/get_cell_datatype/Makefile
+++ b/tests/get_cell_datatype/Makefile
@@ -1,5 +1,4 @@
-# boost causes too many warnings at least on gcc-4.8.2 without -Wno-...
-FLAGS = -O3 -W -Wall -Wextra -pedantic -std=c++0x -Wno-unused-local-typedefs
+FLAGS = -W -Wall -Wextra -pedantic -std=c++11 -O3
 INCLUDES = -I$$HOME/include -L$$HOME/lib
 CXX = mpic++ $(FLAGS)
 RUN =
