--- a/tests/load_balancing/Makefile
+++ b/tests/load_balancing/Makefile
@@ -1,6 +1,5 @@
-# boost causes too many warnings at least on gcc-4.8.2 without -Wno-...
-FLAGS = -O3 -W -Wall -Wextra -pedantic -std=c++0x -Wno-unused-local-typedefs -DDEBUG
-INCLUDES = -I$$HOME/include -L$$HOME/lib -lboost_mpi -lboost_program_options -lboost_serialization -lzoltan
+FLAGS = -W -Wall -Wextra -pedantic -std=c++11 -O3
+INCLUDES = -I$$HOME/include -L$$HOME/lib -lboost_program_options -lzoltan
 CXX = mpic++ $(FLAGS)
 
 PROGRAMS = load_balancing_test multi_stage_load_balancing
@@ -8,10 +7,10 @@ PROGRAMS = load_balancing_test multi_stage_load_balancing
 all: $(PROGRAMS)
 
 load_balancing_test: load_balancing_test.cpp ../../dccrg.hpp ../../dccrg_cartesian_geometry.hpp Makefile
-	$(CXX) $< -DDCCRG_TRANSFER_USING_BOOST_MPI $(INCLUDES) -o $@
+	$(CXX) $< $(INCLUDES) -DDEBUG -o $@
 
 multi_stage_load_balancing: multi_stage_load_balancing.cpp ../../dccrg.hpp ../../dccrg_cartesian_geometry.hpp Makefile
-	$(CXX) $< $(INCLUDES) -o $@
+	$(CXX) $< $(INCLUDES) -DDEBUG -o $@
 
 d: data
 data:
