--- a/tests/particles/Makefile
+++ b/tests/particles/Makefile
@@ -1,6 +1,5 @@
-# boost causes too many warnings at least on gcc-4.8.2 without -Wno-...
-FLAGS = -O3 -W -Wall -Wextra -pedantic -std=c++0x -Wno-unused-local-typedefs -DDEBUG
-INCLUDES = -I$$HOME/include -L$$HOME/lib -lboost_mpi -lzoltan
+FLAGS = -W -Wall -Wextra -pedantic -std=c++11 -O3
+INCLUDES = -I$$HOME/include -L$$HOME/lib -lzoltan
 CXX = mpic++ $(FLAGS)
 
 PROGRAMS = simple
@@ -17,7 +16,7 @@ HEADERS = \
 all: $(PROGRAMS)
 
 simple: simple.cpp $(HEADERS) Makefile
-	$(CXX) simple.cpp $(INCLUDES) -o simple
+	$(CXX) -DDEBUG simple.cpp $(INCLUDES) -o simple
 
 d: data
 data:
