--- a/tests/loading/Makefile
+++ b/tests/loading/Makefile
@@ -1,12 +1,11 @@
-# boost causes too many warnings at least on gcc-4.8.2 without -Wno-...
-FLAGS = -O3 -W -Wall -Wextra -pedantic -std=c++0x -Wno-unused-local-typedefs -DDEBUG
-INCLUDES = -I$$HOME/include -L$$HOME/lib -lboost_mpi -lboost_program_options -lboost_serialization -lzoltan
+FLAGS = -W -Wall -Wextra -pedantic -std=c++11 -O3
+INCLUDES = -I$$HOME/include -L$$HOME/lib -lboost_program_options -lzoltan
 CXX = mpic++ $(FLAGS)
 
 all: load
 
 load: load.cpp ../../dccrg.hpp ../../dccrg_cartesian_geometry.hpp Makefile
-	$(CXX) -DDCCRG_TRANSFER_USING_BOOST_MPI load.cpp $(INCLUDES) -o load
+	$(CXX) -DDEBUG load.cpp $(INCLUDES) -o load
 
 d: data
 data:
