--- a/tests/restart/Makefile
+++ b/tests/restart/Makefile
@@ -1,13 +1,12 @@
 # use this many mpi processes in parallel tests
 PROCS := 6
 
-# boost causes too many warnings at least on gcc-4.8.2 without -Wno-...
-FLAGS = -O3 -W -Wall -Wextra -pedantic -std=c++0x -Wno-unused-local-typedefs
+FLAGS = -W -Wall -Wextra -pedantic -std=c++11 -O3
 INCLUDES = -I$$HOME/include -L$$HOME/lib -lboost_program_options -lzoltan
 MPICXX = mpic++ $(FLAGS)
 CXX = g++ $(FLAGS)
 
-PROGRAMS = restart_test restart_test2 variable_cell_data dc2vtk
+PROGRAMS = restart_test restart_test2 variable_cell_data
 
 HEADERS = \
 	../../dccrg.hpp \
@@ -33,8 +32,6 @@ restart_test2: restart_test2.cpp $(HEADERS) Makefile
 variable_cell_data: variable_cell_data.cpp $(HEADERS) Makefile
 	@echo "MPICXX variable_cell_data " && $(MPICXX) -DDEBUG -DDCCRG_SEND_SINGLE_CELLS variable_cell_data.cpp $(INCLUDES) -o variable_cell_data
 
-dc2vtk: dc2vtk.cpp ../../dccrg_cartesian_geometry.hpp Makefile
-	@echo "MPICXX dc2vtk " && $(MPICXX) dc2vtk.cpp $(INCLUDES) -o dc2vtk
 
 # test restart from there directories
 DIRS := 0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23
