--- a/tests/user_neighborhood/Makefile
+++ b/tests/user_neighborhood/Makefile
@@ -1,6 +1,5 @@
-# boost causes too many warnings at least on gcc-4.8.2 without -Wno-...
-FLAGS = -O3 -W -Wall -Wextra -pedantic -std=c++0x -Wno-unused-local-typedefs
-INCLUDES = -I../.. -I../advection -I$$HOME/include -L$$HOME/lib -lboost_mpi -lboost_program_options -lboost_serialization -lzoltan
+FLAGS = -W -Wall -Wextra -pedantic -std=c++11 -O3
+INCLUDES = -I../.. -I../advection -I$$HOME/include -L$$HOME/lib -lboost_program_options -lzoltan
 CXX = mpic++ $(FLAGS)
 
 PROGRAMS = neighbor_list_length game_of_life advection
