Continue moving to C++11 and remove more references to boost::mpi.

--- a/tests/init/Makefile
+++ b/tests/init/Makefile
@@ -5,7 +5,7 @@ CXX = mpic++ $(FLAGS)
 all: init
 
 init: init.cpp ../../dccrg.hpp ../../dccrg_cartesian_geometry.hpp Makefile
-	$(CXX) -DDCCRG_TRANSFER_USING_BOOST_MPI init.cpp $(INCLUDES) -o init
+	$(CXX) init.cpp $(INCLUDES) -o init
 
 c: clean
 clean:
