Add get_cell_datatype test as a project to top level makefile.

--- a/tests/get_cell_datatype/Makefile
+++ b/tests/get_cell_datatype/Makefile
@@ -1,33 +1,11 @@
-FLAGS = -W -Wall -Wextra -pedantic -std=c++11 -O3
-INCLUDES = -I$$HOME/include -L$$HOME/lib
-CXX = mpic++ $(FLAGS)
-RUN =
+all:
+	@$(MAKE) tests/get_cell_datatype/executables -C ../..
 
-PROGRAMS = \
-	enable_if \
-	included \
-	run_time
-
-HEADERS = \
-	../../dccrg.hpp \
-	../../dccrg_get_cell_datatype.hpp
-
-all: $(PROGRAMS)
-
-enable_if: enable_if.cpp $(HEADERS) Makefile
-	$(CXX) enable_if.cpp $(INCLUDES) -o enable_if
-
-included: included.cpp $(HEADERS) Makefile
-	$(CXX) included.cpp $(INCLUDES) -o included
-
-run_time: run_time.cpp $(HEADERS) Makefile
-	$(CXX) run_time.cpp $(INCLUDES) -o run_time
+r: results
+results:
+	@$(MAKE) tests/get_cell_datatype/results -C ../..
 
 c: clean
 clean:
-	rm -f $(PROGRAMS)
-
-t: test
-test: enable_if run_time
-	@for i in enable_if run_time; do echo -n "RUN $$i...  " && $(RUN) ./$$i && echo PASSED; done
+	@$(MAKE) tests/get_cell_datatype/clean -C ../..
 
