Add get_cells test as a project to top level makefile.

--- a/tests/get_cells/Makefile
+++ b/tests/get_cells/Makefile
@@ -1,28 +1,15 @@
-FLAGS = -W -Wall -Wextra -pedantic -std=c++11 -O3
-INCLUDES = -I$$HOME/include -L$$HOME/lib -lzoltan
-MPICXX = mpic++ $(FLAGS)
-MPIRUN = mpirun -np 3
+all:
+	@$(MAKE) tests/get_cells/executables -C ../..
 
-PROGRAMS = test1
+t: test
+test:
+	@$(MAKE) tests/get_cells/tests -C ../..
 
-HEADERS = \
-	../../dccrg.hpp \
-	../../dccrg_cartesian_geometry.hpp \
-	../../dccrg_length.hpp \
-	../../dccrg_mapping.hpp \
-	../../dccrg_topology.hpp \
-	../../dccrg_types.hpp
-
-all: $(PROGRAMS)
-
-test1: test1.cpp $(HEADERS) Makefile
-	@echo "MPICXX $@" && $(MPICXX) -DDEBUG  $< $(INCLUDES) -o $@
+r: results
+results:
+	@$(MAKE) tests/get_cells/results -C ../..
 
 c: clean
 clean:
-	rm -f $(PROGRAMS)
-
-t: test
-test: $(PROGRAMS)
-	@for i in $(PROGRAMS); do echo -n "MPIRUN $$i... " && $(MPIRUN) $$i; done
+	@$(MAKE) tests/get_cells/clean -C ../..
 
