Add a cache for local cell pointers without neighbors.
Use said cache in game of life examples and tests.

--- a/tests/game_of_life/Makefile
+++ b/tests/game_of_life/Makefile
@@ -10,6 +10,6 @@ results:
 	@$(MAKE) tests/game_of_life/results -C ../..
 
 c: clean
-clean:
+clean: results
 	@$(MAKE) tests/game_of_life/clean -C ../..
 
