Switch from tuple to struct in cell cache.

--- a/tests/advection/Makefile
+++ b/tests/advection/Makefile
@@ -1,47 +1,15 @@
-FLAGS = -W -Wall -Wextra -pedantic -std=c++11 -O3
-INCLUDES = -I../.. -I$$HOME/include -L$$HOME/lib -lboost_program_options -lzoltan
-CXX = mpic++ $(FLAGS)
+all:
+	@$(MAKE) tests/advection/executables -C ../..
 
-PROGRAMS = 2d_mpi 2d_mpi_debug 2d_optimized_mpi 2d_optimized_mpi_debug dc2vtk
+t: test
+test:
+	@$(MAKE) tests/advection/tests -C ../..
 
-HEADERS = \
-	../../dccrg.hpp \
-	../../dccrg_cartesian_geometry.hpp \
-	../../dccrg_length.hpp \
-	../../dccrg_mapping.hpp \
-	../../dccrg_topology.hpp \
-	../../dccrg_types.hpp \
-	adapter.hpp \
-	adapter_optimized.hpp \
-	cell.hpp \
-	initialize.hpp \
-	initialize_optimized.hpp \
-	save.hpp \
-	solve.hpp \
-	solve_optimized.hpp
-
-all: $(PROGRAMS)
-
-2d_mpi: 2d.cpp $(HEADERS) Makefile
-	$(CXX) 2d.cpp $(INCLUDES) -o 2d_mpi
-
-2d_mpi_debug: 2d.cpp $(HEADERS) Makefile
-	$(CXX) -DDEBUG 2d.cpp $(INCLUDES) -o 2d_mpi_debug
-
-2d_optimized_mpi: 2d_optimized.cpp $(HEADERS) Makefile
-	$(CXX) 2d_optimized.cpp $(INCLUDES) -o 2d_optimized_mpi
-
-2d_optimized_mpi_debug: 2d_optimized.cpp $(HEADERS) Makefile
-	$(CXX) -DDEBUG 2d_optimized.cpp $(INCLUDES) -o 2d_optimized_mpi_debug
-
-dc2vtk: dc2vtk.cpp ../../dccrg_cartesian_geometry.hpp Makefile
-	$(CXX) dc2vtk.cpp $(INCLUDES) -o dc2vtk
-
-d: data
-data:
-	rm -f *.dc *.vtk
+r: results
+results:
+	@$(MAKE) tests/advection/results -C ../..
 
 c: clean
-clean: data
-	rm -f $(PROGRAMS)
+clean: results
+	@$(MAKE) tests/advection/clean -C ../..
 
