--- a/tests/get_cell_datatype/Makefile
+++ b/tests/get_cell_datatype/Makefile
@@ -1,6 +1,10 @@
 all:
 	@$(MAKE) tests/get_cell_datatype/executables -C ../..
 
+t: test
+test:
+	@$(MAKE) tests/get_cell_datatype/tests -C ../..
+
 r: results
 results:
 	@$(MAKE) tests/get_cell_datatype/results -C ../..
