Switch load balancing tests to project makefile.

--- a/tests/load_balancing/Makefile
+++ b/tests/load_balancing/Makefile
@@ -1,22 +1,10 @@
-FLAGS = -W -Wall -Wextra -pedantic -std=c++11 -O3
-INCLUDES = -I$$HOME/include -L$$HOME/lib -lboost_program_options -lzoltan
-CXX = mpic++ $(FLAGS)
+all:
+	@$(MAKE) tests/load_balancing/executables -C ../..
 
-PROGRAMS = load_balancing_test multi_stage_load_balancing
-
-all: $(PROGRAMS)
-
-load_balancing_test: load_balancing_test.cpp ../../dccrg.hpp ../../dccrg_cartesian_geometry.hpp Makefile
-	$(CXX) $< $(INCLUDES) -DDEBUG -o $@
-
-multi_stage_load_balancing: multi_stage_load_balancing.cpp ../../dccrg.hpp ../../dccrg_cartesian_geometry.hpp Makefile
-	$(CXX) $< $(INCLUDES) -DDEBUG -o $@
-
-d: data
-data:
-	rm -f *vtk *visit
+t: test
+test:
+	@$(MAKE) tests/load_balancing/tests -C ../..
 
 c: clean
-clean: data
-	rm -f $(PROGRAMS)
-
+clean:
+	@$(MAKE) tests/load_balancing/clean -C ../..
